--- a/ui/style.css
+++ b/ui/style.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: sans-serif;
     background-color: lightgrey;
@@ -19,4 +20,14 @@ body {
 .img-medium {
     height: 200px;
 }
+.container
+           {
+               max-width: 800px;
+    margin: 0 auto;
+    color: #845e5e;
+    font-family: sans-serif;
+    padding: 60px;
+    padding-left: 20px;
+    padding-right: 30px;
+           }
 
